--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,6 @@
 FROM node:17-alpine as builder
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL="${REACT_APP_API_URL}"
 WORKDIR /app
 COPY package*.json .
 RUN npm install
