--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,11 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+    ports:
+      - "5432:5432"
     volumes:
       - ./backend/init-user-db.sh:/docker-entrypoint-initdb.d/init-user-db.sh
+      - /data/marketing_postgres:/var/lib/postgresql/data
 
   frontend:
     image: marketing-llm-frontend:latest
@@ -46,3 +49,7 @@ services:
       - "./Caddyfile:/etc/caddy/Caddyfile"
       - "caddy_data:/data"
       - "caddy_config:/config"
+
+volumes:
+  caddy_data:
+  caddy_config:
