--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - name: prepare .env file
         run: |
-          echo ${{ env.ECS_ENV_RAW_CONTENT }} > .env
+          echo ${{ vars.ECS_ENV_RAW_CONTENT }} > .env
           echo ${{ secrets.ECS_ENV_DB_PASSWORD }} >> .env
       - name: run stack
         run: >
