fixup workflow var att2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - name: prepare .env file
         run: |
-          echo $ECS_ENV_RAW_CONTENT > .env
+          echo "$ECS_ENV_RAW_CONTENT" > .env
           echo ${{ secrets.ECS_ENV_DB_PASSWORD }} >> .env
       - name: run stack
         run: >
