--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - name: build
         run: >
           docker compose build
-          --build-arg REACT_APP_API_URL=${{ env.REACT_APP_API_URL }}
+          --build-arg REACT_APP_API_URL=${{ vars.REACT_APP_API_URL }}
 
   run_project:
     name: Run project
