perform cleanup, use pagination

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
         run: >
           docker compose build
           --build-arg REACT_APP_API_URL=${{ vars.REACT_APP_API_URL }}
+          --no-cache
 
   run_project:
     name: Run project
@@ -31,5 +32,7 @@ jobs:
         run: >
           docker compose up
           -d --force-recreate
+      - name: cleanup
+        run: docker system prune -af
     env:
       ECS_ENV_RAW_CONTENT: ${{ vars.ECS_ENV_RAW_CONTENT }}
