--- a/model/Dockerfile
+++ b/model/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3.8-slim
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
   dumb-init \
+  wget \
   build-essential \
   && rm -rf /var/lib/apt/lists/*
 
