use more variables for configuration dockerized project

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 EMAIL=iamuser@example.com
 ECS_DOMAIN=localhost
 POSTGRES_EXTERNAL_PORT=5432
+POSTGRES_PASSWORD=strongpassword
 REACT_APP_API_URL=http://localhost
+POSTGRES_DATA_MOUNT=/data/postgres/
+MODEL_DATA_MOUNT=/data/model/
