--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,8 @@ services:
     ports:
       - "$POSTGRES_EXTERNAL_PORT:5432"
     volumes:
-      - ./backend/script_create.sql:/docker-entrypoint-initdb.d/init-user-db.sql
-      - /data/marketing_postgres:/var/lib/postgresql/data
+      - "./backend/script_create.sql:/docker-entrypoint-initdb.d/init-user-db.sql"
+      - "$POSTGRES_DATA_MOUNT:/var/lib/postgresql/data"
 
   frontend:
     image: marketing-llm-frontend:latest
@@ -55,7 +55,7 @@ services:
       context: ./model
     restart: always
     volumes:
-      - "/data/marketing_weights/:/app/weights/"
+      - "$MODEL_DATA_MOUNT:/app/weights/"
 
 volumes:
   caddy_data:
