--- a/.github/workflows/dev-server.yml
+++ b/.github/workflows/dev-server.yml
@@ -13,10 +13,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: .
-      - name: prepare .env file
+      - name: prepare .env file and override file
         run: |
           echo "${{ vars.ECS_ENV_RAW_CONTENT }}" > .env
           echo "${{ secrets.ECS_ENV_DB_PASSWORD }}" >> .env
+          echo "${{ vars.DOCKER_COMPOSE_OVERRIDE_CONTENT }}" > docker-compose.override.yml
       - name: build
         run: >
           docker compose build
